--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
