--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "chart.js": "^4.4.7",
     "firebase": "^11.1.0",
-    "next": "15.0.4",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
