--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "chart.js": "^4.4.7",
     "firebase": "^11.1.0",
+    "framer-motion": "^12.3.1",
     "next": "^15.1.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
