--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.3.1",
     "next": "^15.1.6",
     "react": "^18.3.1",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -24,6 +25,7 @@
     "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
