--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "chart.js": "^4.4.7",
     "firebase": "^11.1.0",
     "framer-motion": "^12.3.1",
-    "next": "^15.1.6",
+    "next": "^15.5.11",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.2.0",
@@ -30,7 +30,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.0.4",
+    "eslint-config-next": "^15.5.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
